# sktime-xai

./: .gitignore  README.md  project.md  pyproject.toml
examples/: 01_forecasting_shap.ipynb  02_rocket_explainer.ipynb  inspect_rocket.py  inspect_rocket_clf.py  verify_mvp.py  verify_rocket.py
sktime_xai/base/: _base_attribution.py  _base_explainer.py
sktime_xai/classification/: _rocket_explainer.py
sktime_xai/forecasting/: _shap_forecaster.py
sktime_xai/visualization/: _temporal_heatmap.py
